# mashin_provider_starter

./: .gitignore  Cargo.toml  README.md  mod.ts
.github/workflows/: build.yml
examples/: my_provider.ts  my_provider_x500.ts
src/: lib.rs
